--- a/DockerFile
+++ b/DockerFile
@@ -1,13 +1,20 @@
-FROM node:14-alpine
+# Use an official Node.js runtime as the base image
+FROM node:14
 
-WORKDIR /usr/src/app
+# Set the working directory inside the container
+WORKDIR /app
 
+# Copy package.json and package-lock.json to the container
 COPY package*.json ./
 
-RUN npm ci --only=production
+# Install app dependencies
+RUN npm install
 
+# Copy the rest of the application code to the container
 COPY . .
 
-EXPOSE 3000
+# Expose the port the app runs on
+EXPOSE 4100
 
-CMD [ "npm", "start" ]
+# Command to start the app
+CMD [ "npm", "run", "start:prod" ]
